[package]
name = "tracing-bunyan-formatter"
version = "0.2.5-alpha.0"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"

license = "MIT/Apache-2.0"

repository = "https://github.com/LukeMathWalker/tracing-bunyan-formatter"
documentation = "https://docs.rs/tracing-bunyan-formatter/"
readme = "README.md"

description = "A Bunyan formatter for the tracing crate"

keywords = ["logging", "metrics", "tracing", "bunyan", "subscriber"]
categories = ["development-tools::profiling", "development-tools::debugging"]

[lib]
path = "src/lib.rs"

[features]
default = ["arbitrary-precision"]
arbitrary-precision = ["serde_json/arbitrary_precision"]

[dependencies]

tracing = { git = "https://github.com/Drevoed/tracing", branch = "chore/update-opentelemetry", default-features = false, features = ["log", "std", "attributes"] }
tracing-subscriber = { git = "https://github.com/Drevoed/tracing", branch = "chore/update-opentelemetry", default-features = false, features = ["registry", "fmt"] }
tracing-log = { git = "https://github.com/Drevoed/tracing", branch = "chore/update-opentelemetry" }
log = "0.4.8"
serde_json = { version = "1.0.52" }
serde = "1.0.106"
gethostname = "0.2.1"
tracing-core = { git = "https://github.com/Drevoed/tracing", branch = "chore/update-opentelemetry" }
chrono = "0.4.11"

[dev-dependencies]
lazy_static = "1.4.0"
